kubernetes/ollama/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    kubernetes.io/metadata.name: ollama
